[backend] Add place handlers
