# internal/api/v1/thing/get_thing.go
@@ -13,9 +13,12 @@ import (
 // @Param       id path int true "Thing ID"
 // @Success     200 {object} dto.ThingResponse
 // @Failure     404 {object} dto.EmptyResponse
+// @Failure     400 {object} dto.ErrorResponse
+// @Failure     500 {object} dto.ErrorResponse
 // @Summary     Get one thing by ID
 // @Tags  		Things
 // @security 	BasicAuth
+// @Accept      json
 // @Produce     json
 func GetThingHandler(sp interfaces.IServiceProvider) fiber.Handler {
 	return func(fctx *fiber.Ctx) error {
